cf_analysis_results/checkerframework_results/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8.txt
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/test/IOUtilsTest.java:73: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-526 $$ java.io.FileInputStream $$ possible exceptional exit due to stream.available() with exception type java.io.IOException $$ ( 2072, 2100 ) $$ @MustCall method close may not have been invoked on temp-var-526 or any of its aliases.
			BufferedInputStream stream = new BufferedInputStream(new FileInputStream(outFile));
			                                                     ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to stream.available() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/ConfigUtils.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ inStream $$ java.io.InputStream $$ regular method exit $$ ( 360, 434 ) $$ @MustCall method close may not have been invoked on inStream or any of its aliases.
		InputStream inStream = new FileInputStream(new File("config.properties"));
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:146: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-630 $$ java.io.FileWriter $$ possible exceptional exit due to out.write(str) with exception type java.io.IOException $$ ( 4214, 4241 ) $$ @MustCall method close may not have been invoked on temp-var-630 or any of its aliases.
			BufferedWriter out = new BufferedWriter(new FileWriter(file, false));
			                                        ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.write(str) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:157: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-636 $$ java.io.FileWriter $$ regular method exit $$ ( 4486, 4506 ) $$ @MustCall method close may not have been invoked on temp-var-636 or any of its aliases.
			IOUtils.exportSTSToDot(sts, new FileWriter(file));
			                            ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:198: error: (required.method.not.called) $$ 4 $$ method close $$ writer $$ java.io.FileWriter $$ regular method exit $$ ( 5595, 5624 ) $$ @MustCall method close may not have been invoked on writer or any of its aliases.
				writer = new FileWriter(file);
				       ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/xml/XMLAdapter.java:53: error: (return) $$ 2 $$ @MustCallUnknown Object $$ @MustCall Object $$ ( 1595, 1598 ) $$ incompatible types in return.
		return obj;
		       ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/nusmv/NuSMVConsole.java:275: error: (required.method.not.called) $$ 4 $$ method close $$ inputStream $$ java.io.InputStream $$ regular method exit $$ ( 6630, 6678 ) $$ @MustCall method close may not have been invoked on inputStream or any of its aliases.
		InputStream inputStream = proc.getInputStream();
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/nusmv/NuSMVConsole.java:276: error: (required.method.not.called) $$ 4 $$ method close $$ outputStream $$ java.io.OutputStream $$ regular method exit $$ ( 6682, 6733 ) $$ @MustCall method close may not have been invoked on outputStream or any of its aliases.
		OutputStream outputStream = proc.getOutputStream();
		             ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/engine/RelaxedEngine.java:76: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2624 $$ java.io.InputStream $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 2373, 2394 ) $$ @MustCall method close may not have been invoked on temp-var-2624 or any of its aliases.
            StreamGobbler errorGobbler = new StreamGobbler(proc.getErrorStream(), "ERROR");            
                                                                              ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/engine/RelaxedEngine.java:82: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2627 $$ java.io.InputStream $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 2676, 2697 ) $$ @MustCall method close may not have been invoked on temp-var-2627 or any of its aliases.
            InputStreamReader isr = new InputStreamReader(proc.getInputStream());
                                                                             ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/minimizer/BisimulationMinimizer.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-3820 $$ java.io.FileWriter $$ regular method exit $$ ( 1158, 1184 ) $$ @MustCall method close may not have been invoked on temp-var-3820 or any of its aliases.
			IOUtils.exportSTSToDot(resultSTS, new FileWriter(outputFile));
			                                  ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/minimizer/TraceEquivalenceMinimizer.java:24: error: (required.method.not.called) $$ 4 $$ method close $$ fout $$ java.io.FileWriter $$ possible exceptional exit due to fout.write(input2Dot) with exception type java.io.IOException $$ ( 612, 655 ) $$ @MustCall method close may not have been invoked on fout or any of its aliases.
			FileWriter fout = new FileWriter(tempFile);
			           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to fout.write(input2Dot) with exception type java.io.IOException
12 errors
